Added 2 more collections with the appropriate routes. All collections well-grouped in Swagger UI All post and put features now works
