# routes/productsRoutes.js
@@ -1,35 +1,72 @@
 const express = require('express');
 const router = express.Router();
-const productController = require('../controllers/productsController');
+const controller = require('../controllers/productsController');
 
 // Create product
-router.post('/', productController.createProduct);
-/* #swagger.tags = ['Products']
-   #swagger.summary = 'Create a product'
-*/
+router.post(
+  '/',
+  /*
+    #swagger.tags = ['Products']
+    #swagger.summary = 'Create a product'
+    #swagger.parameters['body'] = {
+      in: 'body',
+      required: true,
+      schema: {
+        name: 'Chocolate Cake',
+        description: 'Delicious soft cake',
+        price: 25000,
+        category: 'cakes',
+        imageUrl: 'https://example.com/image.jpg',
+        stock: 10
+      }
+    }
+  */
+  controller.createProduct
+);
 
 // Get all products
-router.get('/', productController.getProducts);
-/* #swagger.tags = ['Products']
-   #swagger.summary = 'Get all products'
-*/
+router.get(
+  '/',
+  /* #swagger.tags = ['Products']
+     #swagger.summary = 'Get all products'
+  */
+  controller.getProducts
+);
 
 // Get product by ID
-router.get('/:id', productController.getProductById);
-/* #swagger.tags = ['Products']
-   #swagger.summary = 'Get product by ID'
-*/
+router.get(
+  '/:id',
+  /* #swagger.tags = ['Products']
+     #swagger.summary = 'Get product by ID'
+  */
+  controller.getProductById
+);
 
 // Update product
-router.put('/:id', productController.updateProduct);
-/* #swagger.tags = ['Products']
-   #swagger.summary = 'Update a product'
-*/
+router.put(
+  '/:id',
+  /*
+    #swagger.tags = ['Products']
+    #swagger.summary = 'Update product'
+    #swagger.parameters['body'] = {
+      in: 'body',
+      required: true,
+      schema: {
+        price: 30000,
+        stock: 5
+      }
+    }
+  */
+  controller.updateProduct
+);
 
 // Delete product
-router.delete('/:id', productController.deleteProduct);
-/* #swagger.tags = ['Products']
-   #swagger.summary = 'Delete a product'
-*/
+router.delete(
+  '/:id',
+  /* #swagger.tags = ['Products']
+     #swagger.summary = 'Delete product'
+  */
+  controller.deleteProduct
+);
 
 module.exports = router;
