# routes/usersRoutes.js
@@ -1,58 +1,71 @@
 const express = require('express');
 const router = express.Router();
-const userController = require('../controllers/usersController');
+const controller = require('../controllers/usersController');
 
-// Add a user
-router.post('/', userController.createUser);
-/* #swagger.tags = ['Users']
-   #swagger.summary = 'Add a user'
-*/
+// Create user
+router.post(
+  '/',
+  /*
+    #swagger.tags = ['Users']
+    #swagger.summary = 'Create a user'
+    #swagger.parameters['body'] = {
+      in: 'body',
+      required: true,
+      schema: {
+        name: 'Iruoghene',
+        email: 'Iruoghene@example.com',
+        role: 'customer',
+        oauthId: '123456'
+      }
+    }
+  */
+  controller.createUser
+);
 
 // Get all users
-router.get('/', userController.getUsers);
-/* #swagger.tags = ['Users']
-   #swagger.summary = 'Get all users'
-*/
+router.get(
+  '/',
+  /* #swagger.tags = ['Users']
+     #swagger.summary = 'Get all users'
+  */
+  controller.getUsers
+);
 
 // Get user by ID
-router.get('/:id', userController.getUserById);
-/* #swagger.tags = ['Users']
-   #swagger.summary = 'Get user by ID'
-*/
-
+router.get(
+  '/:id',
+  /* #swagger.tags = ['Users']
+     #swagger.summary = 'Get user by ID'
+  */
+  controller.getUserById
+);
 
 // Update user
-router.put('/:id', userController.updateUser);
-/* #swagger.tags = ['Users']
-   #swagger.summary = 'Update a user'
-   #swagger.parameters['id'] = {
-        in: 'path',
-        required: true,
-        type: 'string',
-        description: 'User ID'
-   }
-   #swagger.requestBody = {
-        required: true,
-        content: {
-            "application/json": {
-                schema: {
-                    type: "object",
-                    properties: {
-                        name: { type: "string" },
-                        email: { type: "string" },
-                        role: { type: "string" },
-                        oauthId: { type: "string" }
-                    }
-                }
-            }
-        }
-   }
-*/
+router.put(
+  '/:id',
+  /*
+    #swagger.tags = ['Users']
+    #swagger.summary = 'Update a user'
+    #swagger.parameters['body'] = {
+      in: 'body',
+      required: true,
+      schema: {
+        name: 'Updated Name',
+        email: 'updated@example.com',
+        role: 'admin'
+      }
+    }
+  */
+  controller.updateUser
+);
 
 // Delete user
-router.delete('/:id', userController.deleteUser);
-/* #swagger.tags = ['Users']
-   #swagger.summary = 'Delete a user'
-*/
+router.delete(
+  '/:id',
+  /* #swagger.tags = ['Users']
+     #swagger.summary = 'Delete a user'
+  */
+  controller.deleteUser
+);
 
 module.exports = router;
